minitrace-macro/tests/trace/ui/err/012-optional-is-unknown-ident.rs
use minitrace::trace;

#[trace(name = "a", some_unknown = true)]
fn f() {}

fn main() {
    f();
}
